# lambda-api-microservice-template

./: .coverage  README.md  expected-openapi.yaml  requirements.txt
app/: main.py  models.py  test_main.py
app/routers/: echo.py  health.py  spec.py  user.py
app/service/: service.py  test_service.py
app2/: README.md  openapi.yaml  setup.cfg
app2/.openapi-generator/: FILES
app2/src/openapi_server/: main.py  security_api.py
app2/src/openapi_server/apis/: echo_api.py  echo_api_base.py  health_api.py  health_api_base.py  spec_api.py  spec_api_base.py  user_api.py  user_api_base.py
app2/src/openapi_server/models/: health_check200_response.py  user.py
app2/tests/: test_echo_api.py  test_health_api.py  test_spec_api.py  test_user_api.py
lambda-build/app/: dependencies.py  main.py  test_main.py
lambda-build/app/routers/: echo.py  user.py
lambda-build/app/service/: service.py
lambda-build/fastapi-0.115.4.dist-info/: RECORD
